# labs

./: .gitignore  LAB_AUTOMATION_COMMANDS_SUMMARY.md  README.md  build.gradle.kts  license.txt  settings.gradle.kts  specmatic-schema.json  validate_readme_commands.py
api-coverage/: README.md  docker-compose.yaml  specmatic.yaml
api-resiliency-testing/: README.md  docker-compose.yaml  specmatic.yaml
api-security-schemes/: .dockerignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml  specmatic.yaml
arazzo-workflow-testing/: .env  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml
async-event-flow/: .gitignore  Dockerfile  README.md  build.gradle.kts  create-topics.sh  docker-compose.yaml  run-suite-config.yaml  specmatic.yaml
backward-compatibility-testing/: README.md  docker-compose.yaml  products-breaking.yaml  products-fixed.yaml  products.yaml
coding-agents/: AGENT.md  README.md  products_api.yaml
continuous-integration/: .spectral.yaml  README.md  docker-compose.yaml
data-adapters/: README.md  build.gradle.kts  docker-compose.yaml  pascalCase.yaml  specmatic.yaml
workflow-testing/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
workflow-testing/common/: singleton.py
workflow-testing/scripts/: db_init.py
workflow-testing/services/location/: __init__.py  models.py  routes.py
workflow-testing/services/order/: event_bus.py  events.py  models.py
workflow-testing/services/warehouse/: __init__.py  models.py  routes.py
workflow-testing/specs/openapi/: location.yaml  product.yaml  warehouse.yaml
(+207 files in other folders)
